<resources>
    <string name="app_name">myHome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Name</string>
    <string name="your_username">Username</string>
    <string name="your_fist_name">Vorname</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="re_type_password">Passwort wiederholen</string>
    <string name="register">Registrieren</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="edit_buy_list">"Einkaufslisten bearbeiten"</string>
</resources>
